bk_ida/gobmkida/c3/new_dfa
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:918:12: error: expected expression
*( _OWORD *)&pdfa->max_states = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:918:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pdfa->max_states = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:919:12: error: expected expression
*( _OWORD *)&pdfa->pre_rotated = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:919:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pdfa->pre_rotated = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:920:12: error: expected expression
*( _OWORD *)&pdfa->name[64] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:920:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pdfa->name[64] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:921:12: error: expected expression
*( _OWORD *)&pdfa->name[48] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:921:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pdfa->name[48] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:922:12: error: expected expression
*( _OWORD *)&pdfa->name[32] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:922:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pdfa->name[32] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:923:12: error: expected expression
*( _OWORD *)&pdfa->name[16] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:923:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pdfa->name[16] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:924:12: error: expected expression
*( _OWORD *)pdfa->name = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/patterns/dfa.c:924:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)pdfa->name = 0LL; 
   ^
14 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/new_dfa/src/obj/3/dfa.o] Error 1
